--- a/gdsc-website/indexOutput.css
+++ b/gdsc-website/indexOutput.css
@@ -542,8 +542,20 @@ video {
   position: relative;
 }
 
-.bottom-\[1rem\] {
-  bottom: 1rem;
+.bottom-\[1\.2rem\] {
+  bottom: 1.2rem;
+}
+
+.right-\[6\.9rem\] {
+  right: 6.9rem;
+}
+
+.top-\[50\%\] {
+  top: 50%;
+}
+
+.top-\[40\%\] {
+  top: 40%;
 }
 
 .flex {
@@ -562,6 +574,29 @@ video {
   justify-content: center;
 }
 
+.justify-evenly {
+  justify-content: space-evenly;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.bg-\[\#4385f3\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(67 133 243 / var(--tw-bg-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.text-xl {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
 .text-\[\#515151\] {
   --tw-text-opacity: 1;
   color: rgb(81 81 81 / var(--tw-text-opacity));
@@ -572,11 +607,22 @@ video {
   color: rgb(195 195 195 / var(--tw-text-opacity));
 }
 
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.drop-shadow-lg {
+  --tw-drop-shadow: drop-shadow(0 10px 8px rgb(0 0 0 / 0.04)) drop-shadow(0 4px 3px rgb(0 0 0 / 0.1));
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 /* FONTS ARE WRITTEN HERE */
 
 /* font-family: 'Borel', cursive;
 font-family: 'Courgette', cursive;
 font-family: 'Dancing Script', cursive;
+font-family: 'JetBrains Mono', monospace;
 font-family: 'Jost', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif;
@@ -594,13 +640,25 @@ font-family: 'Ubuntu', sans-serif; */
   font-family: 'Poppins', sans-serif;
 }
 
+.font-jetbrain{
+  font-family: 'JetBrains Mono', monospace;
+}
+
 #HeroSection_1_{
   width: 100%;
   height: 100vh;
   /* background-color: green; */
-  overflow: hidden;
-  padding-left: 12rem;
-  padding-right: 12rem;
+  /* overflow: hidden; */
+}
+
+.GDSCbig{
+  font-size: 21rem;
+  rotate: 90deg;
+  font-weight: 900;
+  line-height: 0;
+  left: -23rem;
+  top: 29rem;
+  color: #363636;
 }
 
 .UEM{
@@ -622,8 +680,27 @@ font-family: 'Ubuntu', sans-serif; */
   background-color: rgba(197, 182, 182,0);
 }
 
+.androidGif{
+  pointer-events: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+}
+
 .GoogleStudentDeveloperStudentClubs{
   width: 38rem;
+}
+
+.gitBigLine{
+  height: 200vh;
+  width: 10rem;
+}
+
+.gdscLogoContainer{
+  position: absolute;
+  top: -3.56rem;
+  left: 6rem;
+  width: 15%;
 }
 
 @media (min-width: 1024px) {
@@ -631,49 +708,160 @@ font-family: 'Ubuntu', sans-serif; */
     position: absolute;
   }
 
-  .lg\:right-\[-11rem\] {
-    right: -11rem;
+  .lg\:bottom-\[-2\.6rem\] {
+    bottom: -2.6rem;
   }
 
-  .lg\:right-\[5rem\] {
-    right: 5rem;
-  }
-
-  .lg\:top-\[66\%\] {
-    top: 66%;
-  }
-
-  .lg\:top-\[-5rem\] {
-    top: -5rem;
-  }
-
-  .lg\:top-\[-2rem\] {
-    top: -2rem;
-  }
-
-  .lg\:top-\[-3rem\] {
-    top: -3rem;
-  }
-
-  .lg\:left-\[-4rem\] {
-    left: -4rem;
-  }
-
-  .lg\:left-\[4rem\] {
-    left: 4rem;
-  }
-
-  .lg\:left-\[12rem\] {
-    left: 12rem;
+  .lg\:bottom-\[-9\.4rem\] {
+    bottom: -9.4rem;
   }
 
   .lg\:left-\[14rem\] {
     left: 14rem;
   }
 
+  .lg\:left-\[4rem\] {
+    left: 4rem;
+  }
+
+  .lg\:right-\[-11rem\] {
+    right: -11rem;
+  }
+
+  .lg\:right-\[1\.9rem\] {
+    right: 1.9rem;
+  }
+
+  .lg\:right-\[12rem\] {
+    right: 12rem;
+  }
+
+  .lg\:right-\[1rem\] {
+    right: 1rem;
+  }
+
+  .lg\:right-\[2rem\] {
+    right: 2rem;
+  }
+
+  .lg\:right-\[5rem\] {
+    right: 5rem;
+  }
+
+  .lg\:top-\[-15rem\] {
+    top: -15rem;
+  }
+
+  .lg\:top-\[-3rem\] {
+    top: -3rem;
+  }
+
+  .lg\:top-\[-9\.6rem\] {
+    top: -9.6rem;
+  }
+
+  .lg\:top-\[21\.5rem\] {
+    top: 21.5rem;
+  }
+
+  .lg\:top-\[6\.5rem\] {
+    top: 6.5rem;
+  }
+
+  .lg\:top-\[69\%\] {
+    top: 69%;
+  }
+
+  .lg\:top-\[8rem\] {
+    top: 8rem;
+  }
+
+  .lg\:right-\[2\.01rem\] {
+    right: 2.01rem;
+  }
+
+  .lg\:right-\[1\.5rem\] {
+    right: 1.5rem;
+  }
+
+  .lg\:right-\[1\.95rem\] {
+    right: 1.95rem;
+  }
+
+  .lg\:bottom-\[-9rem\] {
+    bottom: -9rem;
+  }
+
+  .lg\:top-\[2rem\] {
+    top: 2rem;
+  }
+
+  .lg\:top-\[4rem\] {
+    top: 4rem;
+  }
+
+  .lg\:top-\[2\.5rem\] {
+    top: 2.5rem;
+  }
+
+  .lg\:top-\[18rem\] {
+    top: 18rem;
+  }
+
+  .lg\:top-\[15rem\] {
+    top: 15rem;
+  }
+
+  .lg\:top-\[17rem\] {
+    top: 17rem;
+  }
+
+  .lg\:ml-4 {
+    margin-left: 1rem;
+  }
+
+  .lg\:h-\[1\.4em\] {
+    height: 1.4em;
+  }
+
+  .lg\:w-\[0\.56rem\] {
+    width: 0.56rem;
+  }
+
+  .lg\:w-\[2\.4rem\] {
+    width: 2.4rem;
+  }
+
+  .lg\:w-\[2\.5rem\] {
+    width: 2.5rem;
+  }
+
+  .lg\:w-\[4em\] {
+    width: 4em;
+  }
+
+  .lg\:px-8 {
+    padding-left: 2rem;
+    padding-right: 2rem;
+  }
+
+  .lg\:py-3 {
+    padding-top: 0.75rem;
+    padding-bottom: 0.75rem;
+  }
+
+  .lg\:pt-1 {
+    padding-top: 0.25rem;
+  }
+
   .lg\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
+  }
+
+  .lg\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
   }
 
   .lg\:text-8xl {
@@ -689,3 +877,5 @@ font-family: 'Ubuntu', sans-serif; */
     font-weight: 900;
   }
 }
+
+  
