--- a/gdsc-website/src/components/index.css
+++ b/gdsc-website/src/components/index.css
@@ -9,6 +9,7 @@
 /* font-family: 'Borel', cursive;
 font-family: 'Courgette', cursive;
 font-family: 'Dancing Script', cursive;
+font-family: 'JetBrains Mono', monospace;
 font-family: 'Jost', sans-serif;
 font-family: 'Montserrat', sans-serif;
 font-family: 'Open Sans', sans-serif;
@@ -27,18 +28,35 @@ font-family: 'Ubuntu', sans-serif; */
   font-family: 'Poppins', sans-serif;
 }
 
+.font-jetbrain{
+  font-family: 'JetBrains Mono', monospace;
+}
+
 
 
 #HeroSection_1_{
   width: 100%;
   height: 100vh;
 
+
   /* background-color: green; */
 
-  overflow: hidden;
+  /* overflow: hidden; */
 
-  padding-left: 12rem;
-  padding-right: 12rem;
+}
+
+.GDSCbig{
+
+  font-size: 21rem;
+  rotate: 90deg;
+
+  font-weight: 900;
+  line-height: 0;
+
+  left: -23rem;
+  top: 29rem;
+
+  color: #363636;
 }
 
 .UEM{
@@ -63,7 +81,28 @@ font-family: 'Ubuntu', sans-serif; */
   background-color: rgba(197, 182, 182,0);
 }
 
+.androidGif{
+  pointer-events: none;
+  user-select: none;
+}
+
 .GoogleStudentDeveloperStudentClubs{
 
   width: 38rem;
 }
+
+.gitBigLine{
+  height: 200vh;
+  width: 10rem;
+}
+
+.gdscLogoContainer{
+
+  position: absolute;
+  top: -3.56rem;
+  left: 6rem;
+
+  width: 15%;
+}
+
+  
