--- a/gdsc-website/src/components/index.css
+++ b/gdsc-website/src/components/index.css
@@ -34,6 +34,8 @@ font-family: 'Ubuntu', sans-serif; */
 
 
 
+/* ========================================= */
+/* THE HERO SECTION STARTS HERE */
 #HeroSection_1_{
   width: 100%;
   height: 100vh;
@@ -105,4 +107,58 @@ font-family: 'Ubuntu', sans-serif; */
   width: 15%;
 }
 
+/* ====================================== */
+/* THE ABOUT GDSC SECTION */
+
+
+#AboutSection{
+
+  width: 100%;
+  height: 100vh;
+
+  background-color: red;
+}
+
+.card1{
+  background-color: #515151;
+
+  padding-left: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+
+  width: 55rem;
+
+
+}
+
+.conceptOfGdsc{
+
+  font-size: 2.5rem ;
+  font-weight: 800;
+}
+
+.card1Para{
+  width: 42rem;
+  font-size: 1.1rem;
+
+}
+
+.gdscMain{
+
+  rotate: 90deg;
+  font-size: 4rem;
   
+  font-weight: 900;
+
+  right: 0;
+  top: 4rem;
+
+  background: #cccccc;
+
+  padding-left: 1rem;
+  padding-right: 1.6rem;
+
+  color: white;
+
+}
+
