--- a/gdsc-website/src/components/index.css
+++ b/gdsc-website/src/components/index.css
@@ -224,7 +224,7 @@ font-family: 'Ubuntu', sans-serif; */
 
   height: 100vh;
   width: 100%;
-  background-color: green;
+  background-color: white;
 
   display: flex;
   justify-content: center;
@@ -259,7 +259,7 @@ font-family: 'Ubuntu', sans-serif; */
   
   position: absolute;
 
-  bottom: -0.9rem;
+  bottom: -1rem;
   right: 10.5rem;
 
   color: white;
@@ -293,12 +293,13 @@ font-family: 'Ubuntu', sans-serif; */
 /* TECHNOLOGIES WE ARE EXITED ABOUT SECTION */
 
 #TechnologiesWeAreExitedAbout{
-  height: 100vh;
+  height: 200vh;
   width: 100%;
-  background: yellow;
+  background: white;
 
   position: relative;
 }
+
 
 .TechnologiesHeading{
 
@@ -313,16 +314,27 @@ font-family: 'Ubuntu', sans-serif; */
   font-size: 2rem;
   font-weight: 900;
   color: #363636;
+
+  position: absolute;
+
+  bottom: -1.4rem;
+  right: 0.25rem;
+
+
 }
 
 ._technologiesCardDiv{
 
   width: 70rem;
+  height: 18rem;
   background-color: #515151;
 
   color: white;
   padding: 2rem;
 
   font-size: 1.4rem;
+
+  margin-right: 20rem;
+  margin-top: 6rem;
 }
 
