--- a/gdsc-website/src/components/index.css
+++ b/gdsc-website/src/components/index.css
@@ -120,7 +120,7 @@ font-family: 'Ubuntu', sans-serif; */
   width: 100%;
   height: 100vh;
 
-  background-color: red;
+  background-color: white;
 }
 
 .card{
