--- a/gdsc-website/indexOutput.css
+++ b/gdsc-website/indexOutput.css
@@ -695,7 +695,7 @@ font-family: 'Ubuntu', sans-serif; */
 
 #HeroSection_1_{
   width: 100%;
-  height: 100vh;
+  height: 61rem;
   /* background-color: green; */
   /* overflow: hidden; */
 }
@@ -774,7 +774,7 @@ font-family: 'Ubuntu', sans-serif; */
 
 #AboutSection{
   width: 100%;
-  height: 100vh;
+  height: 61rem;
   background-color: white;
   margin-bottom: 5rem;
 }
@@ -925,7 +925,7 @@ font-family: 'Ubuntu', sans-serif; */
 /* STARING WITH SECTION 3 OPPORTUNITIES */
 
 #Opportunities{
-  height: 100vh;
+  height: 61rem;
   width: 100%;
   background-color: white;
   display: flex;
@@ -977,7 +977,7 @@ font-family: 'Ubuntu', sans-serif; */
 /* TECHNOLOGIES WE ARE EXITED ABOUT SECTION */
 
 #TechnologiesWeAreExitedAbout{
-  height: 240vh;
+  height: 128rem;
   width: 100%;
   background: white;
   position: relative;
@@ -1044,7 +1044,7 @@ font-family: 'Ubuntu', sans-serif; */
 /* TEAM SECTION BELOW HERE */
 
 #TeamSection{
-  height: 120vh;
+  height: 65rem;
   width: 100%;
   background-color: white;
 }
@@ -1132,7 +1132,7 @@ font-family: 'Ubuntu', sans-serif; */
 /* THE EVENTS SECTION */
 
 #EventSection{
-  height: 105vh;
+  height: 60rem;
   background-color: white;
   margin-bottom: 10rem;
 }
